attempt to fix image jumping error by undoing fixed position

--- a/css/work.css
+++ b/css/work.css
@@ -226,7 +226,9 @@ body {
 @media only screen and (max-width: 414px) {
 
 	.project {
-		background-attachment: fixed;
+		background-size: cover;
+		background-attachment: scroll;
+		background-position: center;
 	}
 
 	.work_preview_text {
